# CPP-Practice

./: .gitignore  CMakeLists.txt  Makefile  TestClass.cpp  TestClass.h  TestProj.cpp  main.cpp
Boards/: Board.cpp  Board.h  VectorBoard.cpp
Evaluators/: Evaluator.h  SimpleEvaluator.cpp  ThreadedEvaluator.cpp
